...
                            Container(
                              padding: EdgeInsets.all(8.0),
                              decoration: BoxDecoration(
                                  border: Border(
                                      bottom: BorderSide(color: Colors.grey))),
                              child: TextFormField(
                                key: const Key('EmailTextFormField'),
                                style: TextStyle(color: Colors.black),
                                validator: (email) {
                                  if (email!.isEmpty) {
                                    return "Email Address is Empty";
                                  } else {
                                    if (!RegExp(
...
                                },
                              ),
                            ),
                            Container(
                              padding: EdgeInsets.all(8.0),
                              child: TextFormField(
                                key: const Key('PasswordTextFormField'),
                                style: TextStyle(color: Colors.black),
                                validator: (password) {
                                  if (password!.isEmpty) {
                                    return "password is  empty";
                                  }
                                },
...
                                Color.fromRGBO(143, 148, 251, 1),
                                Color.fromRGBO(143, 148, 251, .6),
                              ],
                            ),
                          ),
                          child: ElevatedButton(
                            key: const Key('LoginButton'),
                            onPressed: () {
                              signIn();
                            },
                            style: ElevatedButton.styleFrom(
                                primary: Colors.transparent),
                            child: Text(
...
