...
          mainAxisSize: MainAxisSize.max,
          mainAxisAlignment: MainAxisAlignment.spaceBetween,
          children: <Widget>[
            SizedBox(width: 7.0),
            barIcon(icon: Icons.home, page: 0,iconKey: const Key('home-button')),
            barIcon(icon: Icons.add_location, page: 1, iconKey: const Key('itinerary-button')),
            barIcon(icon: Icons.favorite, page: 2,iconKey: const Key('category-button')),
            barIcon(
              icon: Icons.mode_comment,
              page: 3,
              iconKey: const Key('comment-button')
            ),
            barIcon(icon: Icons.person, page: 4,iconKey: const Key('profile-button')),
...
