...
        body: ListView(
      children: <Widget>[
        Center(
          child: Padding(
            padding: const EdgeInsets.fromLTRB(30.0, 15.0, 30.0, 5.0),
            child: DropdownButtonFormField(
              key: const Key('category-select-dropdown'),
                decoration: InputDecoration(
                  enabledBorder: OutlineInputBorder(
                    borderSide:
                        BorderSide(color: Colors.grey.shade700, width: 2),
                    borderRadius: BorderRadius.circular(20),
                  ),
...
