...
    'reviewText': "70 reviews",
    'url':
        "https://www.booking.com/hotel/lk/rr-house.en-gb.html?aid=304142&label=gen173rf-1FCAEoggI46AdIM1gDaIUBiAEBmAExuAEHyAEM2AEB6AEB-AECiAIBogIKbWVkaXVtLmNvbagCA7gC5If-iQbAAgHSAiQyMzg5MzIxMS0wNWVmLTQ1NGMtOGVjZS1hNjE2YzAxNjExMzPYAgXgAgE&sid=390a26734d91d32dd7fa72f6baf97b44&dest_id=-2214877&dest_type=city&group_adults=2&group_children=0&hapos=97&hpos=22&no_rooms=1&sr_order=popularity&srepoch=16321
  },
  {
    'address': "Nuwara Eliya",
    'checkin': "23:30 - 00:00",
    'checkout': "04:00 - 10:00",
    'city': "Nuwara Eliya",
    'coordinates': "6.96884700,80.78098500",
    'description':
        "Boasting city views, Wood cabana Nuwaraeliya features accommodation with a balcony and a kettle, around 2.2 miles from Gregory Lake. The property has mountain views and is 6.2 miles from Hakgala Botanical Garden and 1.4 miles from Pedro Tea Factory. This bed and breakfast comes with a kitchen, a seating area, a dining area and a satellite flat-screen TV. Towels and bed linen are available
    'hotelId': 4190502,
...
